$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-09-10 [B] Fixed setting email sender address {Nibbler}
2010-09-03 [B] Updated regex to fix error message for blank 'allowed file types' values (thread ID 66289) {eenemeenemuu}
2010-09-03 [B] Fixed missing classid attribute causing videos not to play (thread ID 66477 & 66393) {eenemeenemuu}
2010-09-03 [B] Fixed issue when regular users try to upload to self-created public albums with simple upload form (thread ID 66903) {eenemeenemuu}
2010-09-02 [B] Allow admin to change email address (thread ID 66881) {eenemeenemuu}
2010-09-01 [B] Fixed template error if guests are allowed to create public albums {eenemeenemuu}
2010-09-01 [A] Added partial Catalan language file (user contribution) {eenemeenemuu}
2010-09-01 [A] Added partial Portuguese language file (user contribution) {eenemeenemuu}
2010-08-31 [C] HTML validation (thread ID 66448) {eenemeenemuu}
2010-08-30 [B] Fixed issue where users can edit public albums (thread ID 66380) {eenemeenemuu}
2010-08-30 [B] Fixed lower case user name issue with plugin usergal_alphatabs (thread ID 66485) {eenemeenemuu}
2010-08-23 [B] Fixed album manager issue when users aren't allowed to create private albums (thread ID 66325) {eenemeenemuu}
2010-08-23 [B] Added code that makes sure mb_strlen actually exists when called (thread ID 66674) {GauGau}
2010-08-20 [B] Updated default value of transparent_overlay in configuration.htm (thread ID 66660) {eenemeenemuu}
2010-08-20 [O] Updated Finnish language file (user contribution) {eenemeenemuu}
2010-08-19 [B] Added language fallback to function cpg_get_default_lang_var (thread ID 66513) {eenemeenemuu}